fixing general overflow 3

--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -180,7 +180,6 @@ body {
   align-items: center;
   gap: var(--spacing);
   margin: var(--spacing) 0;
-  overflow: hidden;
 }
 
 .project-container {
